--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+img.AvatarUser {
+  width: 120px;
+  height: 120px;
   pointer-events: none;
+  border-radius: 50%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
