--- a/src/css/Comentarios.css
+++ b/src/css/Comentarios.css
@@ -1,3 +1,11 @@
+.Comentarios {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+
 .Comentarios .Comentario {
   width: 100%;
   max-width: 400px;
@@ -10,12 +18,13 @@
 
 .Comentarios .Comentario .user {
   display: flex;
+  align-items: center;
 }
 
 .Comentarios .Comentario .user img {
   width: 100%;
-  max-width: 60px;
-  max-height: 60px;
+  max-width: 45px;
+  max-height: 45px;
   border-radius: 50%;
   margin-right: 5px;
 }
@@ -31,16 +40,19 @@
   margin-top: 10px;
 }
 
-
-
 @media (max-width: 830px) {
+  .Comentarios {
+    flex-direction: column;
+    width: 100%;
+  }
+
   .Comentarios .Comentario {
-    margin: 10px auto !important;
+    max-width: 95%;
+    margin: 10px auto;
   }
 
   .S9gUrf-YoZ4jf {
     display: flex;
     justify-content: center;
   }
-
 }
