--- a/src/css/FormularioContacto.css
+++ b/src/css/FormularioContacto.css
@@ -1,7 +1,7 @@
 .FormContact {
   background-color: #e6e1dc;
   width: 100%;
-  max-width: 400px;
+  max-width: 1155px;
   margin: 10px auto;
   padding: 25px;
   display: flex;
@@ -15,11 +15,11 @@
   font-size: 14px;
 }
 
-.FormContact h3{
+.FormContact h3 {
   font-size: 30px;
   text-transform: uppercase;
   font-weight: bold;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .FormContact input,
@@ -76,18 +76,19 @@ textarea:focus::placeholder {
   margin-top: 8px;
   background-color: rgb(4, 153, 153);
   cursor: pointer;
+  max-width: 300px;
 }
 
+.BtnGoogle {
+  width: 100%;
+  max-width: 1150px;
+  margin: auto;
+}
 
 @media screen and (max-width: 777px) {
-  .FormContact .Colx2, .Colx1{
+  .FormContact .Colx2,
+  .Colx1 {
     flex-direction: column;
     margin: 0px;
   }
-
-  .FormContact {
-    max-width: 400px;
-  }
-
-  
 }
